# spam

./: .gitignore
beijing_park_list/: Cargo.toml
beijing_park_list/output/: beijing_park_list.list
beijing_park_list/src/: main.rs
flight_radar_24/: Cargo.toml  Readme.md
flight_radar_24/src/config/: application.yml  login_cookies.txt  login_resp.txt  travel.list
fog_of_world/: Cargo.toml
fog_of_world/assets/: index.html
fog_of_world/cache/: file_cache_coordinate
fog_of_world/snapshots/ox00/: Snapshot-20241104T163651+0800.fwss
fog_of_world/snapshots/xiaochai/: Snapshot-20241101T213106 0800.fwss
fog_of_world/src/: amap_api.rs  coor_trans.rs  coordinate.rs  file_analyze.rs  file_cache.rs  generate_js.rs  lib.rs  main.rs
