[package]
name = "flight_radar_24"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.12.8", features = ["multipart", "blocking", "cookies"] }
yaml-rust = "0.4.5"
anyhow = "1.0.89"
lazy_static = "1.5.0"
chrono = "0.4.38"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
