[package]
name = "fog_of_world"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.25.4"
lazy_static = "1.5.0"
libflate = "2.1.0"
show-image = "0.14.0"
anyhow = "1.0.91"
axum = "0.7.7"
tokio = { version = "1.41.0", features = ["rt", "macros","rt-multi-thread"] }
serde = { version = "1.0.214", features = ["derive"] }
tower-http = { version = "0.6.1", features = ["full"] }
tower = "0.5.1"
tracing-subscriber = { version = "0.3.18" ,features = []}
tracing = "0.1.40"
reqwest = { version = "0.12.9", features = ["blocking"] }
serde_json = "1.0.132"
zip = "2.2.0"
